--- a/JniOpenGL/app/CMakeLists.txt
+++ b/JniOpenGL/app/CMakeLists.txt
@@ -18,7 +18,8 @@ add_library( # Sets the name of the library.
 
         # Provides a relative path to your source file(s).
         src/main/cpp/gljnidemo.cpp
-        src/main/cpp/stringsjnidemo.cpp)
+        src/main/cpp/stringsjnidemo.cpp
+        )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
