--- a/JniOpenGL/app/CMakeLists.txt
+++ b/JniOpenGL/app/CMakeLists.txt
@@ -33,6 +33,24 @@ find_library( # Sets the name of the path variable.
         # Specifies the name of the NDK library that
         # you want CMake to locate.
         log)
+find_library( # Sets the name of the path variable.
+        android-lib
+
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        android)
+find_library( # Sets the name of the path variable.
+        egl-lib
+
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        EGL)
+find_library( # Sets the name of the path variable.
+        gles-lib
+
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        GLESv2)
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
@@ -43,4 +61,7 @@ target_link_libraries( # Specifies the target library.
 
         # Links the target library to the log library
         # included in the NDK.
-        ${log-lib})
+        ${log-lib}
+        ${android-lib}
+        ${egl-lib}
+        ${gles-lib})
