--- a/JniOpenGL/app/CMakeLists.txt
+++ b/JniOpenGL/app/CMakeLists.txt
@@ -17,7 +17,7 @@ add_library( # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        src/main/cpp/gljnidemo.cpp
+        src/main/cpp/glsljnidemo.cpp
         src/main/cpp/stringsjnidemo.cpp
         )
 
